--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,17 @@
         android:layout_height="0dp">
 
 
+        <Button
+            android:id="@+id/btn_next"
+            android:visibility="invisible"
+            android:text="Next"
+            android:textSize="30dp"
+            android:backgroundTint="@color/orange"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center|top"
+            android:layout_width="150dp"
+            android:layout_height="80dp"/>
+
         <TextView
             android:id="@+id/text"
             android:layout_marginHorizontal="32dp"
@@ -48,6 +59,7 @@
                 android:text="AC" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_plus_minus"
                 style="@style/Gray.Button"
                 android:layout_marginHorizontal="18dp"
                 android:text="+/-" />
