--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,16 @@
         <item name="android:onClick">onNumberClick</item>
     </style>
 
+    <style name="White.Gray.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">20dp</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+
 </resources>
