--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -44,6 +44,7 @@
             android:text="Brand" />
 
         <TextView
+            android:id="@+id/text_view"
             android:layout_marginTop="70dp"
             android:layout_marginBottom="16dp"
             android:textStyle="bold"
