--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="orange">#FF9F0A</color>
     <color name="gray">#A5A5A5</color>
     <color name="dark_gray">#333333</color>
-    <color name="white_gray">#CFCFCF</color>
+    <color name="white_gray">#F1F5F8</color>
     <color name="red">#D50000</color>
 </resources>
