--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,6 +7,38 @@
     android:background="@color/white_gray"
     tools:context=".SecondActivity">
 
+    <FrameLayout
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingHorizontal="12dp"
+        android:background="@color/dark_gray"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:src="@drawable/ic_fire"
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
+
+        <ImageButton
+            android:layout_gravity="center|start"
+            android:backgroundTint="@color/dark_gray"
+            android:layout_width="50dp"
+            android:src="@drawable/ic_menu"
+            android:layout_height="50dp"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center|end"
+            android:layout_marginStart="12dp"
+            android:backgroundTint="@color/dark_gray"
+            android:paddingStart="0dp"
+            android:src="@drawable/ic_search" />
+
+    </FrameLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +77,7 @@
 
         <TextView
             android:id="@+id/text_view"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="50dp"
             android:layout_marginBottom="16dp"
             android:textStyle="bold"
             android:textColor="@color/black"
@@ -56,14 +88,45 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_destroy"
+            android:textColor="@color/white"
             android:backgroundTint="@color/red"
             android:text="Export as CSV"
             android:textAllCaps="false"
             app:cornerRadius="10dp"
             android:layout_width="250dp"
             android:layout_height="70dp"/>
+
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
+        android:paddingHorizontal="14dp"
+        android:gravity="bottom">
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:text="Country of Origin"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/white_gray"
+            android:drawableEnd="@drawable/ic_arrow_down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:text="Product Category"
+            android:textColor="@color/black"
+            android:layout_marginHorizontal="10dp"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/white_gray"
+            android:drawableEnd="@drawable/ic_arrow_down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
