--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,8 @@
         <item name="android:textSize">20dp</item>
         <item name="android:textAlignment">textStart</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:drawableEnd">@drawable/ic_arrow_right</item>
         <item name="android:backgroundTint">@color/white</item>
     </style>
 
